src/objects/Transfer_Parts__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credits_Billed__c</fullName>
        <label>Credits Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Paid_To__c</fullName>
        <label>Fee Paid To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BlueWave</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <description>A master-detail relationship from Transfer Parts up to Production.</description>
        <label>Production</label>
        <referenceTo>Production__c</referenceTo>
        <relationshipLabel>Transfer Parts</relationshipLabel>
        <relationshipName>Transfer_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transfer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A lookup relationship from Transfer Parts up to Transfer.</description>
        <label>Transfer</label>
        <referenceTo>Transfer__c</referenceTo>
        <relationshipLabel>Transfer Parts</relationshipLabel>
        <relationshipName>Transfer_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transfer Parts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transfer Parts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Fee_Paid_To_field_required_for_Fee</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Type__c, &quot;Fee&quot;), 
OR( 
ISBLANK(TEXT(Fee_Paid_To__c)), 
NOT(ISBLANK(Transfer__c)) 
) 
)</errorConditionFormula>
        <errorMessage>Fee Paid To field cannot be blank if your Type is selected as Fee. 
Transfer field has to be blank if your Type is selected as Fee.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transfer_field_required_for_Transfer</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Type__c, &quot;Transfer&quot;), 
OR( 
NOT(ISBLANK(TEXT(Fee_Paid_To__c))), 
(ISBLANK(Transfer__c)) 
) 
)</errorConditionFormula>
        <errorMessage>Transfer field cannot be blank if your Type is selected as Transfer. 
Fee Paid To field has to be blank if your Type is selected as Transfer.</errorMessage>
    </validationRules>
</CustomObject>